--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "next": "^13.4.10",
+    "geolib": "^3.3.4",
+    "mapbox-gl": "^2.15.0",
+    "next": "^13.4.11",
     "postcss": "8.4.26",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.1.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "uuidv4": "^6.2.13"
